# toucan

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.txt  LICENSE  README.md
include/: CMakeLists.txt  ToucanGenDataTypes.h
include/ToucanGPUSim/: ToucanGPUGenDataTypes.h
include/ToucanSim/: ToucanGenDataTypes.h
include/toucan/: CGToucanOpName.h  CMakeLists.txt  CodeGenCommon.h  MicroPart.h  MicroPartLocalValueAllocator.h  MicroPartitioner.h  MultiRegionMicroPartScheduler.h  PartitioningGraph.h  PartitioningManager.h  RepCutPartitioner.h  SchedulerBase.h  Toucan.td  ToucanAnalysis.h  ToucanAttributes.h  ToucanAttributes.td  ToucanCodeGenInfo.h  ToucanConfigs.h  ToucanDialect.h  ToucanDialect.td  ToucanOps.h  ToucanOps.td  ToucanPassCommon.h  ToucanPasses.h  ToucanPasses.td  ToucanTypes.h  ToucanTypes.td  ToucanUtils.h  ToucanVecOpLimits.h
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt  DesignGraph.cpp  GraphUtils.cpp  IsLegalToucan4B.cpp  LocalValueAllocator.cpp  MicroPart.cpp  MicroPartLocalValueAllocator.cpp  MicroPartitioner.cpp  MultiRegionMicroPartScheduler.cpp  MultiRegionPartitioner.cpp  MultiRegionScheduler.cpp  NaivePartitioner.cpp  PartitionerBase.cpp  PartitionerNCodeGenBase.cpp  PartitioningGraph.cpp  PartitioningManager.cpp  RepCutPartitioner.cpp  SchedulerBase.cpp  SingleRegionMicroPartScheduler.cpp  SingleRegionScheduler.cpp  ToucanAnalysis.cpp  TwoRegionScheduler.cpp
lib/Dialect/: CMakeLists.txt  ToucanDialect.cpp  ToucanTypes.cpp
lib/Passes/: BreakPinnedValueToOutputConnection.cpp  CMakeLists.txt  CPUSingleThreadCodeGen.cpp  Canonicalizer.cpp  DeduplicateRegisters.cpp  EnsureNoClockOp.cpp  EnsureToucanOnly.cpp  ExpandHWArray.cpp  ExpandMemoryDelay.cpp  ExpandSVMacro.cpp  FactorArrayGet.cpp  FactorBinaryOp.cpp  FactorConcatExtract.cpp  FactorHWMisc.cpp  FactorHWWire.cpp  FlatDCE.cpp  Flatten.cpp  GPUCodeGen.cpp  LowerCombPreProcess.cpp  LowerCombTo4B_1.cpp  LowerCombTo4B_2.cpp  LowerCombTo4B_3.cpp  LowerCombTo4B_ReplicateOp.cpp  LowerCombTo4B_ShortReplicateOp.cpp  LowerHWVectorTo4B.cpp  LowerRegMemTo4B.cpp  LowerSeqTo4B.cpp  LowerToBinaryOp.cpp  MergeConst.cpp  ParallelCanonicalizer.cpp  RemoveConstRegs.cpp  RemoveMemMask.cpp  RemoveMemReadEn.cpp  RemoveOM.cpp  RemoveSVnOM.cpp  RemoveSeq.cpp  ReplaceAsyncResetRegs.cpp  SplitFirMemRWPorts.cpp  SplitRegisters.cpp  ToucanCanonicalizer.cpp
lib/ToucanGPUSim/: CMakeLists.txt  Serializer.cpp  SimInit.cpp
lib/ToucanSim/: CMakeLists.txt  Serdes.cpp  Serializer.cpp  SimInit.cpp
lib/Utils/: BoostSetting.cpp  CMakeLists.txt  CodeGenHelper.cpp  Utils.cpp
tools/: CMakeLists.txt
tools/firtool/: CMakeLists.txt
tools/toucan/: CMakeLists.txt  toucan.cpp
